                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 13-10-2005 changed: Logging starts earlier (some logs weren't being logged)
 - 13-10-2005 fixed: Music files navigation, same path could be in the directoryhistory more then once in a row (causing having to press back multiple times to navigate back)
 - 13-10-2005 added: Playlists in My Music Library now act as folders.  The items are displayed in the order found in the playlist.
                     Since no tag data is read for these items yet, they are not sortable, and only displayed by filename.
 - 13-10-2005 fixed: My Music Library Playlist listing was not sortable
 - 13-10-2005 fixed: xbms shares should be working again, they are case sensitive
 - 13-10-2005 fixed: dvdplayer could hang if player was paused and user tried to exit the player
 - 12-10-2005 fixed: dts -> analog codec did not always work for dvdplayer
 - 12-10-2005 fixed: Seekbar was broken, should work now
 - 11-10-2005 fixed: paths with commas in my music files
 - 11-10-2005 fixed: bug in my music library albums regarding albums with the same name, aka "greatest hits"
 - 11-10-2005 removed: setting blank or missing music tags to "unknown"
 - 11-10-2005 changed: cleaned up dts/ac3 passtrough code somewhat for dvdplayer
 - 10-10-2005 fixed: videomode override should work for ntsc->pal now.
 - 10-10-2005 updated: mplayer.dll (new ffmpeg, fixes some avi files among other things)
 - 10-10-2005 fixed: control.hasfocus() didn't work on dialogs, only full windows
 - 10-10-2005 changed: how my music files keeps its path history.  this should correct naviagtion issues with overlapping bookmarks, and bookmarks which can traverse into the playlists location.